# rencfs-desktop

./: .env_template  .gitattributes  .gitignore  Cargo.toml  README.md  _config.yml  encrypted_fs_desktop.db
.github/workflows/: ci.yml
encrypted_fs_desktop_common/: Cargo.toml
encrypted_fs_desktop_common/proto/: encrypted_fs_desktop.proto
encrypted_fs_desktop_common/src/: app_details.rs  build.rs  lib.rs  models.rs  persistence.rs  schema.rs  storage.rs  vault_handler.rs  vault_service_error.rs
encrypted_fs_desktop_daemon/: Cargo.toml
encrypted_fs_desktop_daemon/src/: lib.rs  main.rs  vault_service.rs
encrypted_fs_desktop_gui/: Cargo.toml  build.rs
encrypted_fs_desktop_gui/src/: dashboard.rs  detail.rs  listview.rs  main.rs  util.rs
encrypted_fs_desktop_gui/src/detail/: daemon_service.rs  db_service.rs  persistence_service.rs
encrypted_fs_desktop_gui/src/listview/: trait.rs
encryptedfs_desktop_common/: Cargo.toml
encryptedfs_desktop_common/proto/: encryptedfs_desktop.proto
encryptedfs_desktop_common/src/: lib.rs  persistence.rs  storage.rs  vault_handler.rs
encryptedfs_desktop_daemon/: Cargo.toml  build.rs
encryptedfs_desktop_daemon/src/: main.rs  vault_service.rs
encryptedfs_desktop_gui/: Cargo.toml  build.rs
encryptedfs_desktop_gui/src/: dashboard.rs  detail.rs  main.rs
encryptedfs_desktop_gui/src/detail/: daemon_service.rs  db_service.rs
rencfs_desktop_common/: Cargo.toml
rencfs_desktop_common/migrations/2024-04-15-002038_create_vaults/: down.sql  up.sql
rencfs_desktop_common/proto/: rencfs_desktop.proto
rencfs_desktop_common/src/: app_details.rs  dao.rs  directories.rs  lib.rs  persistence.rs  storage.rs  vault_handler.rs  vault_service_error.rs
rencfs_desktop_daemon/: Cargo.toml
rencfs_desktop_daemon/src/: main.rs  vault_service.rs
rencfs_desktop_gui/: .env_template  Cargo.toml  build.rs
rencfs_desktop_gui/src/: dashboard.rs  detail.rs  listview.rs  main.rs  util.rs
rencfs_desktop_gui/src/detail/: daemon_service.rs  db_service.rs
rencfs_desktop_gui/src/listview/: state.rs  trait.rs
