[workspace]

members = [
    "encryptedfs_desktop_gui",
    "encryptedfs_desktop_daemon",
    "encryptedfs_desktop_common",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
diesel = { version = "2.1.5", features = ["sqlite"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
tonic = "0.11"
tonic-types = "0.11.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0.1"
tracing-appender = "0.2.3"
static_init = "1.0.3"
thiserror = "1.0.58"
serde = { version = "1.0.198" }
serde_json = "1.0.116"
sysinfo = "0.30.11"
once_cell = "1.19.0"

# build-dependencies
tonic-build = "0.11"
