[package]
name = "encryptedfs_desktop_daemon"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encryptedfs_desktop_common = { path = "../encryptedfs_desktop_common" }

diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
static_init = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

daemonize = "0.5.0"
libc = "0.2.153"
whoami = "=0.9.0"

[build-dependencies]
tonic-build = { workspace = true }
