[package]
name = "rencfs_desktop_common"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sysinfo = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
