[package]
name = "rencfs_desktop_daemon"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rencfs_desktop_common = { path = "../rencfs_desktop_common" }

diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
static_init = { workspace = true }
thiserror = { workspace = true }

daemonize = "0.5.0"
libc = "0.2.153"
whoami = "=1.5.0"

[build-dependencies]
tonic-build = { workspace = true }
